--- a/ch2/style.css
+++ b/ch2/style.css
@@ -1,5 +1,15 @@
-.bg-blue{
-    background-color: blue;
-    color: white;  
-    /* here color is for text color */
+*{
+    margin: 0;
+    padding: 0;
+}
+/* rgb, rgba, hsl, hsla, hexcode --> this are diffrent repres */
+.red{
+    background-color: rgb(166, 255, 234);
+    height: 344px;
+    color: rgb(10, 30, 84);
+}
+
+.green{
+    background-color: hsl(9, 70%, 66%);
+    color: rgba(0, 255, 255, 0.878);
 }
